Updated TextUtilities to differentiate empty and blank